added a couple more endpoints and started organizing and commenting
