# openapi.yaml
@@ -25,6 +25,35 @@ paths:
               schema:
                 type: 
                 example: 
+  /getuser/{id}:
+    get:
+      summary: Return a user with specified id
+      parameters:
+        - in: query
+          name: user_id
+          schema:
+            type: integer
+          required: true
+          description: The ID of the user to retrieve.
+      responses:
+        "200":
+          description: A user object
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    example: 11
+                  name:
+                    type: string
+                    example: "Alice"
+                  email:
+                    type: string
+                    example: "alice@example.com"
+        "404":
+          description: User not found
   /getallgroups:
     get:
       summary: Return all groups in the database
@@ -39,6 +68,28 @@ paths:
   /getallsales:
     get:
       summary: Return all sales in the database
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: 
+                example: 
+  /getAverageSales:
+    get:
+      summary: Return all users sales averages
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: 
+                example: 
+  /timeseries:
+    get:
+      summary: 
       responses:
         "200":
           description: Successful response
